--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^5.1.0",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.11.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
